snippets/Nemerle.Statechart/Tests/testsuite/negative/body_must_be_string.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using System.Collections.Generic;
using System.Linq;
using Nemerle.Statechart;

namespace Nemerle.Statechart.Tests
{
  /// <summary>
  /// Description of AlarmClock.
  /// </summary>
  [statechart(<[]>)] // E: Body expression must be a string
  public class AlarmClock
  {
  }
}
